src/snapshots/spicy__lexer__tests__basic_resistor.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Ident,
        start: 0,
        end: 4,
    },
    Token {
        kind: WhiteSpace,
        start: 5,
        end: 5,
    },
    Token {
        kind: Ident,
        start: 6,
        end: 13,
    },
    Token {
        kind: Newline,
        start: 14,
        end: 14,
    },
    Token {
        kind: Ident,
        start: 15,
        end: 16,
    },
    Token {
        kind: WhiteSpace,
        start: 17,
        end: 17,
    },
    Token {
        kind: Ident,
        start: 18,
        end: 19,
    },
    Token {
        kind: WhiteSpace,
        start: 20,
        end: 20,
    },
    Token {
        kind: Ident,
        start: 21,
        end: 23,
    },
    Token {
        kind: WhiteSpace,
        start: 24,
        end: 24,
    },
    Token {
        kind: Number,
        start: 25,
        end: 25,
    },
    Token {
        kind: Ident,
        start: 26,
        end: 26,
    },
    Token {
        kind: Newline,
        start: 27,
        end: 27,
    },
    Token {
        kind: Ident,
        start: 28,
        end: 29,
    },
    Token {
        kind: WhiteSpace,
        start: 30,
        end: 30,
    },
    Token {
        kind: Ident,
        start: 31,
        end: 32,
    },
    Token {
        kind: WhiteSpace,
        start: 33,
        end: 33,
    },
    Token {
        kind: Number,
        start: 34,
        end: 34,
    },
    Token {
        kind: WhiteSpace,
        start: 35,
        end: 37,
    },
    Token {
        kind: Number,
        start: 38,
        end: 38,
    },
    Token {
        kind: Dot,
        start: 39,
        end: 39,
    },
    Token {
        kind: Number,
        start: 40,
        end: 43,
    },
    Token {
        kind: Ident,
        start: 44,
        end: 44,
    },
    Token {
        kind: Newline,
        start: 45,
        end: 45,
    },
    Token {
        kind: Ident,
        start: 46,
        end: 47,
    },
    Token {
        kind: WhiteSpace,
        start: 48,
        end: 48,
    },
    Token {
        kind: Ident,
        start: 49,
        end: 50,
    },
    Token {
        kind: WhiteSpace,
        start: 51,
        end: 51,
    },
    Token {
        kind: Ident,
        start: 52,
        end: 54,
    },
    Token {
        kind: WhiteSpace,
        start: 55,
        end: 55,
    },
    Token {
        kind: Minus,
        start: 56,
        end: 56,
    },
    Token {
        kind: Number,
        start: 57,
        end: 58,
    },
    Token {
        kind: Newline,
        start: 59,
        end: 59,
    },
    Token {
        kind: Ident,
        start: 60,
        end: 61,
    },
    Token {
        kind: WhiteSpace,
        start: 62,
        end: 62,
    },
    Token {
        kind: Ident,
        start: 63,
        end: 64,
    },
    Token {
        kind: WhiteSpace,
        start: 65,
        end: 65,
    },
    Token {
        kind: Ident,
        start: 66,
        end: 68,
    },
    Token {
        kind: WhiteSpace,
        start: 69,
        end: 69,
    },
    Token {
        kind: Dot,
        start: 70,
        end: 70,
    },
    Token {
        kind: Number,
        start: 71,
        end: 71,
    },
    Token {
        kind: Newline,
        start: 72,
        end: 72,
    },
    Token {
        kind: Ident,
        start: 73,
        end: 74,
    },
    Token {
        kind: WhiteSpace,
        start: 75,
        end: 75,
    },
    Token {
        kind: Ident,
        start: 76,
        end: 77,
    },
    Token {
        kind: WhiteSpace,
        start: 78,
        end: 78,
    },
    Token {
        kind: Ident,
        start: 79,
        end: 81,
    },
    Token {
        kind: WhiteSpace,
        start: 82,
        end: 82,
    },
    Token {
        kind: Number,
        start: 83,
        end: 83,
    },
    Token {
        kind: Dot,
        start: 84,
        end: 84,
    },
    Token {
        kind: Number,
        start: 85,
        end: 86,
    },
    Token {
        kind: Newline,
        start: 87,
        end: 87,
    },
    Token {
        kind: Ident,
        start: 88,
        end: 89,
    },
    Token {
        kind: WhiteSpace,
        start: 90,
        end: 90,
    },
    Token {
        kind: Ident,
        start: 91,
        end: 92,
    },
    Token {
        kind: WhiteSpace,
        start: 93,
        end: 93,
    },
    Token {
        kind: Ident,
        start: 94,
        end: 96,
    },
    Token {
        kind: WhiteSpace,
        start: 97,
        end: 97,
    },
    Token {
        kind: Number,
        start: 98,
        end: 98,
    },
    Token {
        kind: Dot,
        start: 99,
        end: 99,
    },
    Token {
        kind: Number,
        start: 100,
        end: 100,
    },
    Token {
        kind: Ident,
        start: 101,
        end: 102,
    },
    Token {
        kind: Newline,
        start: 103,
        end: 103,
    },
    Token {
        kind: Ident,
        start: 104,
        end: 105,
    },
    Token {
        kind: WhiteSpace,
        start: 106,
        end: 106,
    },
    Token {
        kind: Ident,
        start: 107,
        end: 108,
    },
    Token {
        kind: WhiteSpace,
        start: 109,
        end: 109,
    },
    Token {
        kind: Ident,
        start: 110,
        end: 112,
    },
    Token {
        kind: WhiteSpace,
        start: 113,
        end: 113,
    },
    Token {
        kind: Number,
        start: 114,
        end: 114,
    },
    Token {
        kind: Dot,
        start: 115,
        end: 115,
    },
    Token {
        kind: Number,
        start: 116,
        end: 116,
    },
    Token {
        kind: Ident,
        start: 117,
        end: 117,
    },
    Token {
        kind: Minus,
        start: 118,
        end: 118,
    },
    Token {
        kind: Number,
        start: 119,
        end: 119,
    },
    Token {
        kind: Newline,
        start: 120,
        end: 120,
    },
    Token {
        kind: Ident,
        start: 121,
        end: 122,
    },
    Token {
        kind: WhiteSpace,
        start: 123,
        end: 123,
    },
    Token {
        kind: Ident,
        start: 124,
        end: 125,
    },
    Token {
        kind: WhiteSpace,
        start: 126,
        end: 126,
    },
    Token {
        kind: Ident,
        start: 127,
        end: 129,
    },
    Token {
        kind: WhiteSpace,
        start: 130,
        end: 130,
    },
    Token {
        kind: Minus,
        start: 131,
        end: 131,
    },
    Token {
        kind: Number,
        start: 132,
        end: 132,
    },
    Token {
        kind: Ident,
        start: 133,
        end: 133,
    },
    Token {
        kind: Plus,
        start: 134,
        end: 134,
    },
    Token {
        kind: Number,
        start: 135,
        end: 135,
    },
    Token {
        kind: Newline,
        start: 136,
        end: 136,
    },
    Token {
        kind: Ident,
        start: 137,
        end: 138,
    },
    Token {
        kind: WhiteSpace,
        start: 139,
        end: 139,
    },
    Token {
        kind: Ident,
        start: 140,
        end: 141,
    },
    Token {
        kind: WhiteSpace,
        start: 142,
        end: 142,
    },
    Token {
        kind: Ident,
        start: 143,
        end: 145,
    },
    Token {
        kind: WhiteSpace,
        start: 146,
        end: 146,
    },
    Token {
        kind: Number,
        start: 147,
        end: 148,
    },
    Token {
        kind: Ident,
        start: 149,
        end: 149,
    },
    Token {
        kind: Newline,
        start: 150,
        end: 150,
    },
    Token {
        kind: Ident,
        start: 151,
        end: 153,
    },
    Token {
        kind: WhiteSpace,
        start: 154,
        end: 154,
    },
    Token {
        kind: Ident,
        start: 155,
        end: 156,
    },
    Token {
        kind: WhiteSpace,
        start: 157,
        end: 157,
    },
    Token {
        kind: Ident,
        start: 158,
        end: 160,
    },
    Token {
        kind: WhiteSpace,
        start: 161,
        end: 161,
    },
    Token {
        kind: Number,
        start: 162,
        end: 163,
    },
    Token {
        kind: Ident,
        start: 164,
        end: 166,
    },
    Token {
        kind: Newline,
        start: 167,
        end: 167,
    },
    Token {
        kind: Ident,
        start: 168,
        end: 170,
    },
    Token {
        kind: WhiteSpace,
        start: 171,
        end: 171,
    },
    Token {
        kind: Ident,
        start: 172,
        end: 173,
    },
    Token {
        kind: WhiteSpace,
        start: 174,
        end: 174,
    },
    Token {
        kind: Ident,
        start: 175,
        end: 177,
    },
    Token {
        kind: WhiteSpace,
        start: 178,
        end: 178,
    },
    Token {
        kind: Number,
        start: 179,
        end: 179,
    },
    Token {
        kind: Ident,
        start: 180,
        end: 180,
    },
    Token {
        kind: Newline,
        start: 181,
        end: 181,
    },
    Token {
        kind: Ident,
        start: 182,
        end: 184,
    },
    Token {
        kind: WhiteSpace,
        start: 185,
        end: 185,
    },
    Token {
        kind: Ident,
        start: 186,
        end: 187,
    },
    Token {
        kind: WhiteSpace,
        start: 188,
        end: 188,
    },
    Token {
        kind: Ident,
        start: 189,
        end: 191,
    },
    Token {
        kind: WhiteSpace,
        start: 192,
        end: 192,
    },
    Token {
        kind: Number,
        start: 193,
        end: 195,
    },
    Token {
        kind: Ident,
        start: 196,
        end: 196,
    },
    Token {
        kind: Newline,
        start: 197,
        end: 197,
    },
    Token {
        kind: Ident,
        start: 198,
        end: 200,
    },
    Token {
        kind: WhiteSpace,
        start: 201,
        end: 201,
    },
    Token {
        kind: Ident,
        start: 202,
        end: 203,
    },
    Token {
        kind: WhiteSpace,
        start: 204,
        end: 204,
    },
    Token {
        kind: Ident,
        start: 205,
        end: 207,
    },
    Token {
        kind: WhiteSpace,
        start: 208,
        end: 208,
    },
    Token {
        kind: Number,
        start: 209,
        end: 210,
    },
    Token {
        kind: Ident,
        start: 211,
        end: 211,
    },
    Token {
        kind: Newline,
        start: 212,
        end: 212,
    },
    Token {
        kind: Ident,
        start: 213,
        end: 215,
    },
    Token {
        kind: WhiteSpace,
        start: 216,
        end: 216,
    },
    Token {
        kind: Ident,
        start: 217,
        end: 218,
    },
    Token {
        kind: WhiteSpace,
        start: 219,
        end: 219,
    },
    Token {
        kind: Ident,
        start: 220,
        end: 222,
    },
    Token {
        kind: WhiteSpace,
        start: 223,
        end: 223,
    },
    Token {
        kind: Number,
        start: 224,
        end: 224,
    },
    Token {
        kind: Dot,
        start: 225,
        end: 225,
    },
    Token {
        kind: Number,
        start: 226,
        end: 226,
    },
    Token {
        kind: Ident,
        start: 227,
        end: 227,
    },
    Token {
        kind: Newline,
        start: 228,
        end: 228,
    },
    Token {
        kind: Ident,
        start: 229,
        end: 231,
    },
    Token {
        kind: WhiteSpace,
        start: 232,
        end: 232,
    },
    Token {
        kind: Ident,
        start: 233,
        end: 234,
    },
    Token {
        kind: WhiteSpace,
        start: 235,
        end: 235,
    },
    Token {
        kind: Ident,
        start: 236,
        end: 238,
    },
    Token {
        kind: WhiteSpace,
        start: 239,
        end: 239,
    },
    Token {
        kind: Number,
        start: 240,
        end: 240,
    },
    Token {
        kind: Ident,
        start: 241,
        end: 241,
    },
    Token {
        kind: Newline,
        start: 242,
        end: 242,
    },
    Token {
        kind: Ident,
        start: 243,
        end: 245,
    },
    Token {
        kind: WhiteSpace,
        start: 246,
        end: 246,
    },
    Token {
        kind: Ident,
        start: 247,
        end: 248,
    },
    Token {
        kind: WhiteSpace,
        start: 249,
        end: 249,
    },
    Token {
        kind: Ident,
        start: 250,
        end: 252,
    },
    Token {
        kind: WhiteSpace,
        start: 253,
        end: 253,
    },
    Token {
        kind: Number,
        start: 254,
        end: 254,
    },
    Token {
        kind: Ident,
        start: 255,
        end: 255,
    },
    Token {
        kind: Newline,
        start: 256,
        end: 256,
    },
    Token {
        kind: Ident,
        start: 257,
        end: 259,
    },
    Token {
        kind: WhiteSpace,
        start: 260,
        end: 260,
    },
    Token {
        kind: Ident,
        start: 261,
        end: 262,
    },
    Token {
        kind: WhiteSpace,
        start: 263,
        end: 263,
    },
    Token {
        kind: Ident,
        start: 264,
        end: 266,
    },
    Token {
        kind: WhiteSpace,
        start: 267,
        end: 267,
    },
    Token {
        kind: Number,
        start: 268,
        end: 268,
    },
    Token {
        kind: Dot,
        start: 269,
        end: 269,
    },
    Token {
        kind: Number,
        start: 270,
        end: 270,
    },
    Token {
        kind: Ident,
        start: 271,
        end: 271,
    },
    Token {
        kind: Minus,
        start: 272,
        end: 272,
    },
    Token {
        kind: Number,
        start: 273,
        end: 273,
    },
    Token {
        kind: Ident,
        start: 274,
        end: 274,
    },
    Token {
        kind: Newline,
        start: 275,
        end: 275,
    },
    Token {
        kind: Ident,
        start: 276,
        end: 278,
    },
    Token {
        kind: WhiteSpace,
        start: 279,
        end: 279,
    },
    Token {
        kind: Ident,
        start: 280,
        end: 281,
    },
    Token {
        kind: WhiteSpace,
        start: 282,
        end: 282,
    },
    Token {
        kind: Ident,
        start: 283,
        end: 285,
    },
    Token {
        kind: WhiteSpace,
        start: 286,
        end: 286,
    },
    Token {
        kind: Dot,
        start: 287,
        end: 287,
    },
    Token {
        kind: Number,
        start: 288,
        end: 290,
    },
    Token {
        kind: Ident,
        start: 291,
        end: 291,
    },
    Token {
        kind: Newline,
        start: 292,
        end: 292,
    },
    Token {
        kind: Ident,
        start: 293,
        end: 295,
    },
    Token {
        kind: WhiteSpace,
        start: 296,
        end: 296,
    },
    Token {
        kind: Ident,
        start: 297,
        end: 298,
    },
    Token {
        kind: WhiteSpace,
        start: 299,
        end: 299,
    },
    Token {
        kind: Ident,
        start: 300,
        end: 302,
    },
    Token {
        kind: WhiteSpace,
        start: 303,
        end: 303,
    },
    Token {
        kind: Minus,
        start: 304,
        end: 304,
    },
    Token {
        kind: Number,
        start: 305,
        end: 305,
    },
    Token {
        kind: Dot,
        start: 306,
        end: 306,
    },
    Token {
        kind: Number,
        start: 307,
        end: 308,
    },
    Token {
        kind: Ident,
        start: 309,
        end: 309,
    },
    Token {
        kind: Newline,
        start: 310,
        end: 310,
    },
    Token {
        kind: Dot,
        start: 311,
        end: 311,
    },
    Token {
        kind: Ident,
        start: 312,
        end: 314,
    },
]
